Contents/app.css
/* File name: app.css */
/* Author's name: Jesse Cannon */
/* Web site name: http://jessecannon-miniportfolio.azurewebsites.net/index.html */
/* File description: CSS page for my mini portfolio */

/* change header colour to grey */
header {
    background-color: grey;
}
/* change background colour to light grey */
body {
    padding-bottom: 70px;
    color: black;
    background-color: lightgrey;
     }
/* change all fonts to "Garamond" */
main {
    font-family: "Garamond", sans-serif; 
    color: black;
}
/* centered and alligned the labels */
label {
    display: inline-block;
    width: 250px;
    text-align: right;
}
/* centered the "Submit" button */
#submitButton {
    height: 34px;
    margin: 0;
    margin-right: 190px;
    float: right;
}
/* changed footer colour to grey */
footer {
    background-color: grey;
}

